--- a/style.css
+++ b/style.css
@@ -59,7 +59,6 @@ body {
 
 .typing-area {
   display: flex;
-  color: #6b6d70;
   max-width: 80%;
   height: 90px;
   overflow-y: hidden;
@@ -71,6 +70,28 @@ body {
   flex-wrap: wrap;
 }
 
+.letter {
+  color: #6b6d70;
+  position: relative;
+}
+
+.letter.correct {
+  color: white;
+}
+
+.letter.incorrect {
+  color: #be264c;
+}
+
+.letter.active.cursor::after {
+  content: "";
+  position: absolute;
+  height: 28px;
+  width: 2px;
+  background-color: white;
+  outline: none;
+}
+
 .content {
   width: 80%;
   margin: 0 auto;
@@ -78,14 +99,6 @@ body {
 
 .word {
   display: flex;
-}
-
-.cursor {
-  height: 28px;
-  width: 2px;
-  background-color: white;
-  animation: cursorAnimate 1s infinite cubic-bezier(0.42, 0, 0.58, 1);
-  outline: none;
 }
 
 /* Game-Settings */
