--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap%27");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap");
 
 * {
   margin: 0;
@@ -168,21 +169,10 @@ body {
 
 .logo-name {
   background: -webkit-linear-gradient(90deg, #d82b56, #be264c, #920c2d);
-  -webkit-text-stroke: 0.5px yellow;
-  text-shadow: 1px 1px 30px rgba(255, 255, 0, 0.4);
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
-  font-size: 26 px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 26px;
   text-align: center;
-  font-weight: 700;
-}
-
-@keyframes cursorAnimate {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
 }
